disable sodium_utils3 test

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ script:
 # prepare qemu
 - docker run --rm --privileged multiarch/qemu-user-static:register --reset
 # build image
-- docker build .
+- docker build -t nikscorp/mikrotik-telegram-vpnlist:latest .
+- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+- docker push nikscorp/mikrotik-telegram-vpnlist:latest
